<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_police"
            android:icon="@drawable/police"
            android:title="@string/police" />
        <item
            android:id="@+id/nav_others"
            android:icon="@drawable/emergency"
            android:title="@string/others" />
    </group>

    <item android:title="Others">
        <menu>

            <item
                android:id="@+id/nav_district"
                android:icon="@android:drawable/ic_menu_recent_history"
                android:title="@string/district" />
            <item
                android:id="@+id/nav_bluetooth"
                android:icon="@android:drawable/stat_sys_data_bluetooth"
                android:title="@string/bluetooth" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
