<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/login_"/>
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/username"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_username"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_password"
            android:inputType="textPassword"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:layout_marginTop="20sp"
            android:background="@drawable/button"
            android:hint="@string/signin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/text_signup"
            android:text="@string/no_account"
            android:textStyle="bold"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:visibility="gone"
            android:drawableLeft="@android:drawable/stat_sys_data_bluetooth"
            android:id="@+id/btn_bluetooth"
            android:text="Bluetooth Connection"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>