<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:orientation="horizontal">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@android:drawable/ic_menu_help"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/concents"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="20sp"
            android:id="@+id/msg_txt"
            android:text="@string/msg"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:background="@drawable/round"
            android:gravity="center"
            android:id="@+id/count_text"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="To cancel.. Please enter your password!"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:id="@+id/pass_layout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:id="@+id/pass_text"
            android:inputType="textPassword"
            android:hint="Type your password here, to cancel!"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:id="@+id/cancel_btn"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:background="@null"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:id="@+id/ok_btn"
            android:text="Continue"/>
    </LinearLayout>
</LinearLayout>